assets/css/skeleton.css
/*
* Skeleton V2.0.4
* Copyright 2014, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 12/29/2014
*/

@import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Mono');

.container {
position:relative;
width:100%;
max-width:960px;
margin:0 auto;
padding:0 20px;
box-sizing:border-box
}

.column,.columns {
width:100%;
float:left;
box-sizing:border-box
}

@media (max-width: 549px) {
.container {
width:85%;
padding:0 5px
}
}

@media (min-width: 550px) {
.container {
width:80%
}

.column,.columns {
margin:1%
}

.one.column,.one.columns {
width:4.66666666667%
}

.two.columns {
width:13.3333333333%
}

.three.columns {
width:22%
}

.four.columns {
width:30.6666666667%
}

.five.columns {
width:39.3333333333%
}

.six.columns {
width:48%
}

.seven.columns {
width:56.6666666667%
}

.eight.columns {
width:65.3333333333%
}

.nine.columns {
width:74%
}

.ten.columns {
width:82.6666666667%
}

.eleven.columns {
width:91.3333333333%
}

.twelve.columns {
width:100%;
margin-left:0
}

.one-third.column {
width:30.6666666667%
}

.two-thirds.column {
width:65.3333333333%
}

.one-half.column {
width:48%
}

.offset-by-one.column,.offset-by-one.columns {
margin-left:8.66666666667%
}

.offset-by-two.column,.offset-by-two.columns {
margin-left:17.3333333333%
}

.offset-by-three.column,.offset-by-three.columns {
margin-left:26%
}

.offset-by-four.column,.offset-by-four.columns {
margin-left:34.6666666667%
}

.offset-by-five.column,.offset-by-five.columns {
margin-left:43.3333333333%
}

.offset-by-six.column,.offset-by-six.columns {
margin-left:52%
}

.offset-by-seven.column,.offset-by-seven.columns {
margin-left:60.6666666667%
}

.offset-by-eight.column,.offset-by-eight.columns {
margin-left:69.3333333333%
}

.offset-by-nine.column,.offset-by-nine.columns {
margin-left:78%
}

.offset-by-ten.column,.offset-by-ten.columns {
margin-left:86.6666666667%
}

.offset-by-eleven.column,.offset-by-eleven.columns {
margin-left:95.3333333333%
}

.offset-by-one-third.column,.offset-by-one-third.columns {
margin-left:34.6666666667%
}

.offset-by-two-thirds.column,.offset-by-two-thirds.columns {
margin-left:69.3333333333%
}

.offset-by-one-half.column,.offset-by-one-half.columns {
margin-left:52%
}
}

html {
font-size:62.5%
}

body {
font-size:1.5em;
line-height:1.6;
font-weight:400;
font-family:"Lato","HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
color:#222
}

h1,h2,h3,h4,h5,h6 {
margin-top:0;
margin-bottom:1rem;
font-weight:300
}

p {
margin-top:0
}

a {
text-decoration: none;
color:#1EAEDB
}

a:hover {
color:#0FA0CE
}

a:visited {
text-decoration: underline
}

.button,button,input[type="submit"],input[type="reset"],input[type="button"] {
display:inline-block;
height:38px;
padding:0 30px;
color:#555;
text-align:center;
font-size:15px;
font-weight:600;
line-height:38px;
letter-spacing:.1rem;
text-transform:uppercase;
text-decoration:none;
white-space:nowrap;
background-color:transparent;
border-radius:4px;
border:1px solid #bbb;
cursor:pointer;
box-sizing:border-box
}

.button:hover,button:hover,input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover,.button:focus,button:focus,input[type="submit"]:focus,input[type="reset"]:focus,input[type="button"]:focus {
color:#333;
border-color:#888;
outline:0
}

.button.button-primary,button.button-primary,input[type="submit"].button-primary,input[type="reset"].button-primary,input[type="button"].button-primary {
color:#FFF;
background-color:#33C3F0;
border-color:#33C3F0
}

.button.button-primary:hover,button.button-primary:hover,input[type="submit"].button-primary:hover,input[type="reset"].button-primary:hover,input[type="button"].button-primary:hover,.button.button-primary:focus,button.button-primary:focus,input[type="submit"].button-primary:focus,input[type="reset"].button-primary:focus,input[type="button"].button-primary:focus {
color:#FFF;
background-color:#1EAEDB;
border-color:#1EAEDB
}

input[type="email"],input[type="number"],input[type="search"],input[type="text"],input[type="tel"],input[type="url"],input[type="password"],textarea,select {
height:38px;
padding:6px 10px;
background-color:#fff;
border:1px solid #D1D1D1;
border-radius:4px;
box-shadow:none;
box-sizing:border-box
}

input[type="email"],input[type="number"],input[type="search"],input[type="text"],input[type="tel"],input[type="url"],input[type="password"],textarea {
-webkit-appearance:none;
-moz-appearance:none;
appearance:none
}

textarea {
min-height:65px;
padding-top:6px;
padding-bottom:6px
}

input[type="email"]:focus,input[type="number"]:focus,input[type="search"]:focus,input[type="text"]:focus,input[type="tel"]:focus,input[type="url"]:focus,input[type="password"]:focus,textarea:focus,select:focus {
border:1px solid #33C3F0;
outline:0
}

label,legend {
display:block;
margin-bottom:.5rem;
font-weight:600
}

fieldset {
padding:0;
border-width:0
}

input[type="checkbox"],input[type="radio"] {
display:inline
}

label > .label-body {
display:inline-block;
margin-left:.5rem;
font-weight:400
}

ul {
list-style:circle inside
}

ol {
list-style:decimal inside
}

ol,ul {
padding-left:0;
margin-top:0
}

ul ul,ul ol,ol ol,ol ul {
margin:1.5rem 0 1.5rem 3rem;
font-size:90%
}

li {
margin-bottom:1rem
}

li h2{
font-size: 2.5rem
}

li h2 small{
font-size: 1.7rem
}

li h2 i{
color: #bec2cb
}

code {
padding:.2rem .5rem;
margin:0 .2rem;
font-size:90%;
white-space:nowrap;
background:#F1F1F1;
border:1px solid #bec2cb;
border-radius:4px
}

pre > code {
display:block;
padding:1rem 1.5rem;
white-space:pre
}

th,td {
padding:12px 15px;
text-align:left;
border-bottom:1px solid #bec2cb
}

th:first-child,td:first-child {
padding-left:0
}

th:last-child,td:last-child {
padding-right:0
}

button,.button {
margin-bottom:1rem
}

input,textarea,select,fieldset {
margin-bottom:1.5rem
}

pre,blockquote,dl,figure,table,p,ul,ol,form {
margin-bottom:2.5rem
}

.u-full-width {
width:100%;
box-sizing:border-box
}

.u-max-full-width {
max-width:100%;
box-sizing:border-box
}

.u-pull-right {
float:right
}

.u-pull-left {
float:left
}

hr {
margin-top:3rem;
margin-bottom:3.5rem;
border-width:0;
border-top:1px solid #bec2cb
}

.container:after,.row:after,.u-cf {
content:"";
display:table;
clear:both
}

.navbar,.navbar-spacer {
min-height: 5.6rem;
width:100%;
background:#fff;
z-index:9999;
border-bottom:1px solid #bec2cb;
position:fixed
}

.navbar > .container {
width:100%
}

.navbar-list {
list-style:none;
margin-bottom:0
}

.navbar-item {
position:relative;
float:left;
margin-bottom:0
}

.navbar-link {
text-transform:uppercase;
font-size:15px;
font-weight:600;
letter-spacing:.2rem;
margin-right:1.7rem;
text-decoration:none;
line-height:6.5rem;
color:#222
}

.navbar-link:nth-child(4) {
margin-right:0
}

.navbar-link.active, .navbar-title a.active{
color:#33C3F0
}

.navbar-title{
padding-top:calc(5.6rem / 2 - 1.07rem);
}
.navbar-title a{
text-transform:uppercase;
font-size:15px;
font-weight:600;
letter-spacing:.2rem;
text-decoration:none;
color:#222
}

footer {
min-height: 5.6rem;
margin-top:1rem;
border-top:1px solid #bec2cb
}

.footer-list {
list-style:none;
margin-bottom:0
}

.footer-item {
float:left;
margin-bottom:0
}

.footer-link {
text-transform:uppercase;
font-size:15px;
font-weight:600;
letter-spacing:.2rem;
margin-right:1.7rem;
text-decoration:none;
line-height:6.5rem;
color:#222
}

.footer-link:nth-child(3) {
margin-right:0
}

.footer-link.active {
color:#33C3F0
}

h1 {
font-size:3rem
}

h2 {
font-size:2.7rem
}

h3 {
font-size:2.6rem
}

h4 {
font-size:2.5rem
}

h5 {
font-size:2.3rem
}

h6 {
font-size:2rem
}

body {
font-size:1.5rem;
padding:0;
margin:0
}

.content {
padding-top:11rem;
min-height:85vh
}

.card {
border:1px solid #bec2cb;
border-radius:5px;
margin:10px 0;
min-height:140px
}

.card-content {
margin:0;
padding:7px 7px 5px;
min-height:calc(140px - 36px)
}

.card-action {
border-top:1px solid #bec2cb;
background:#bec2cb;
margin:0;
padding:5px 7px 7px;
height:36px!important
}

.card-content img {
max-width:100%
}

.card-content b {
color:#33C3F0;
font-size:5rem!important;
margin:0
}

.center-align {
text-align:center
}

@media (max-width: 549px) {
.hide-on-small {
display:none
}

.navbar-link {
margin-right:.4rem
}

.navbar-link:nth-child(1),.footer-link, .navbar-title a {
margin-left:.58rem
}

.navbar-link:nth-child(4) {
margin-right:0
}

.footer-link {
line-height:4rem;
margin-right:1rem
}

input[type="search"]{
width:100%
}
}

@media (min-width: 550px) {
.hide-on-bigger {
display: none;
}

input[type="search"]{
width:50%
}
}

svg {
max-width: 270px !important;
text-transform:uppercase;
font-family:'Roboto Mono',monospace
}

